<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.DynamicData2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="horizontal"
        android:translationZ="2dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:background="?android:attr/selectableItemBackground"
            android:padding="12dp"
            android:src="@mipmap/ic_back"
            android:tag="iv_back"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dtsj"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_refresh"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:padding="12dp"
            android:tag="tv_refresh"
            android:text="@string/refresh"
            android:textColor="@android:color/white"
            android:visibility="invisible" />

    </LinearLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:listSelector="@android:color/transparent"
        android:tag="listView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_lastPage"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="38dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_btn_colorhint"
            android:tag="btn_lastPage"
            android:text="@string/last_page"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="14sp" />
        <Button
            android:id="@+id/btn_start"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="38dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_btn_colorprimary"
            android:tag="btn_start"
            android:text="@string/start"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="14sp" />
        <Button
            android:id="@+id/btn_nextPage"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="38dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_btn_colorprimary"
            android:tag="btn_nextPage"
            android:text="@string/next_page"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>