<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="horizontal"
            android:translationZ="2dp">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:background="?android:attr/selectableItemBackground"
                android:padding="12dp"
                android:src="@mipmap/ic_back"
                android:tag="iv_back"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/iotest"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_refresh"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:padding="12dp"
                android:tag="tv_refresh"
                android:text="@string/refresh"
                android:textColor="@android:color/white"
                android:visibility="invisible" />

        </LinearLayout>

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="24dp"
            android:drawablePadding="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:dropDownVerticalOffset="50dp"
            android:scrollbars="none"
            android:spinnerMode="dropdown"
            android:tag="spinner" />

        <TextView
            android:id="@+id/tv_log"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:fadeScrollbars="false"
            android:scrollbars="vertical"
            android:tag="tv_log" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_startTest"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@drawable/shape_btn_colorprimary"
                android:tag="btn_startTest"
                android:text="@string/start_test"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_stopTest"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@drawable/shape_btn_colorprimary"
                android:tag="btn_stopTest"
                android:text="@string/stop_test"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

    <include
        android:id="@+id/float_window"
        layout="@layout/float_window"
        android:visibility="gone" />

</RelativeLayout>