<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_background_gary"
    android:orientation="vertical"
    tools:context=".activity.SettingIpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="horizontal"
            android:translationZ="2dp">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:background="?android:attr/selectableItemBackground"
                android:padding="12dp"
                android:src="@mipmap/ic_arrow_back"
                android:tag="iv_back"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ipsetting"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_refresh"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:padding="12dp"
                android:tag="tv_refresh"
                android:text="@string/refresh"
                android:textColor="@android:color/white"
                android:visibility="invisible" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_crcode"
                    android:layout_width="134dp"
                    android:layout_height="38dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/shape_btn_colorprimary"
                    android:tag="btn_crcode"
                    android:text="识别二维码"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginRight="16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="热点名称："
                        android:textColor="@color/colorAccent"
                        android:textSize="17sp" />

                    <EditText
                        android:id="@+id/et_name"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:tag="et_name"
                        android:textSize="14sp"
                        android:theme="@style/MyEditText" />

                    <Button
                        android:id="@+id/btn_copy1"
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:layout_margin="0dp"
                        android:background="@drawable/shape_btn_red"
                        android:padding="0dp"
                        android:tag="btn_copy1"
                        android:text="复制"
                        android:textColor="@android:color/white"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="热点密码："
                        android:textColor="@color/colorAccent"
                        android:textSize="17sp" />

                    <EditText
                        android:id="@+id/et_pw"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:tag="et_pw"
                        android:textSize="14sp"
                        android:theme="@style/MyEditText" />

                    <Button
                        android:id="@+id/btn_copy2"
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:layout_margin="0dp"
                        android:background="@drawable/shape_btn_red"
                        android:padding="0dp"
                        android:tag="btn_copy2"
                        android:text="复制"
                        android:textColor="@android:color/white"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_openWifi"
                        android:layout_width="0dp"
                        android:layout_height="38dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/shape_btn_colorprimary"
                        android:tag="btn_openWifi"
                        android:text="开启热点"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/btn_jumpWifi"
                        android:layout_width="wrap_content"
                        android:layout_height="38dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/shape_btn_colorprimary"
                        android:tag="btn_jumpWifi"
                        android:text="手动开启"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textSize="15sp"
                        android:visibility="visible" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_wifiState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="16dp"
                    android:tag="tv_wifiState"
                    android:text="热点是否开启：未开启"
                    android:textColor="@color/colorAccent"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:text="android7.0以下自动开启热点，7.0以上需要手动开启"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="12sp"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="硬件IP地址："
                        android:textColor="@color/colorAccent"
                        android:textSize="17sp" />

                    <EditText
                        android:id="@+id/et_input_ip"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:tag="et_input_ip"
                        android:textSize="14sp"
                        android:theme="@style/MyEditText" />

                    <Button
                        android:id="@+id/btn_seeIp"
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:layout_margin="0dp"
                        android:background="@drawable/shape_btn_red"
                        android:padding="0dp"
                        android:tag="btn_seeIp"
                        android:text="获取"
                        android:textColor="@android:color/white"
                        android:textSize="15sp" />

                </LinearLayout>

                <Button
                    android:id="@+id/btn_ok"
                    android:layout_width="170dp"
                    android:layout_height="44dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="58dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/shape_btn_colorprimary"
                    android:tag="btn_ok"
                    android:text="@string/start_obd"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="17sp" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <include
        android:id="@+id/float_window"
        layout="@layout/float_window"
        android:visibility="gone" />

</LinearLayout>